etc/dev/resources/gateway/kustomize/istio-api/virtual-service-grafana.patch.yaml
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "VirtualService"
metadata:
  name: "grafana"
  namespace: "istio-ingress"
spec:
  hosts:
    - "grafana.gitops64"
...
