etc/dev/resources/gateway/kustomize/istio-api/virtual-service-wordpress.patch.yaml
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "VirtualService"
metadata:
  name: "wordpress"
  namespace: "istio-ingress"
spec:
  hosts:
    - "wordpress.gitops64"
...
